[gd_scene load_steps=7 format=3 uid="uid://da5hfxjcweeeh"]

[ext_resource type="Script" uid="uid://dv00mkapla5f6" path="res://Objects/ShopMachineObject/shop_machine.gd" id="1_bxm2h"]
[ext_resource type="PackedScene" uid="uid://cyfuqlg3rg8jp" path="res://Assets/ShopMachine/shop_machine.tscn" id="1_rwgmd"]
[ext_resource type="PackedScene" uid="uid://b6qeiu5u2wdxa" path="res://Objects/ShopMachineObject/ShopScreenViewport.tscn" id="3_d28id"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_rwgmd"]
radius = 0.8
height = 2.7

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_d28id"]

[sub_resource type="PlaneMesh" id="PlaneMesh_bxm2h"]
size = Vector2(0.77, 0.57)

[node name="ShopMachine" type="StaticBody3D" groups=["InteractableObject", "ShopMachineObject"]]
collision_layer = 3
script = ExtResource("1_bxm2h")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_rwgmd")
metadata/_edit_lock_ = true

[node name="ShopMachine" parent="." instance=ExtResource("1_rwgmd")]
metadata/_edit_lock_ = true

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
attenuation_model = 3
volume_db = -5.0
unit_size = 5.0
max_db = 0.5
max_distance = 6.0

[node name="ScreenContents" type="MeshInstance3D" parent="."]
transform = Transform3D(-1, -8.742278e-08, 3.821371e-15, 0, -4.371139e-08, -1, 8.742278e-08, -1, 4.371139e-08, 0, 1.1534032, -0.32347476)
material_override = SubResource("StandardMaterial3D_d28id")
mesh = SubResource("PlaneMesh_bxm2h")

[node name="ShopScreenViewport" parent="." instance=ExtResource("3_d28id")]

[connection signal="closeGUI" from="." to="." method="_on_close_gui"]
[connection signal="openGUI" from="." to="." method="_on_open_gui"]
[connection signal="finished" from="AudioStreamPlayer3D" to="." method="_on_audio_stream_player_3d_finished"]
